fixed overflow bug with top image, added cards

--- a/style.css
+++ b/style.css
@@ -42,30 +42,32 @@ ul li:last-child a {
   margin-top: 18.2rem;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  margin-right: 24rem;
+  height: 42rem;
+  grid-template-rows: auto;
 }
 
 .hero__left {
   display: flex;
   flex-direction: column;
   grid-column: 1 / 8;
+  height: 52rem;
 }
 
 .hero__right {
   grid-column: 8 / 13;
+  height: 100%;
+  background-image: url(./assets/graphic.svg);
+  background-size: cover;
+  background-size: 100% 100%;
   position: relative;
-}
-
-.hero__right img {
-  position: relative;
-  top: -15rem;
-  right: 1rem;
+  scale: 1.2;
+  /* bottom: 6rem; */
 }
 
 .hero__left h2 {
   font-size: 1.6rem;
   color: #ff3998;
-  margin-bottom: 2.4rem;
+  margin-bottom: 2rem;
 }
 
 .hero__left h1 {
@@ -84,4 +86,137 @@ ul li:last-child a {
 .hero__left button {
   align-self: flex-start;
   padding: 2.2rem 5.6rem;
+}
+
+.btn {
+  padding: 22px 56px;
+  border-radius: 10rem;
+  border: 0.6rem solid transparent;
+  font-size: 2rem;
+  color: black;
+  font-weight: 600;
+  background-color: white;
+  background: linear-gradient(rgb(255, 255, 255) 0 0) padding-box,
+    linear-gradient(to right, #ff4974, #c9b06a) border-box;
+  font-family: "Inter", sans-serif;
+}
+
+.orange {
+  margin-top: 20rem;
+  background-image: url(./assets/background.svg);
+  height: 320px;
+  border-radius: 2rem;
+  background-repeat: no-repeat, repeat;
+  background-size: cover;
+  width: 100%;
+}
+
+.orange h2 {
+  font-size: 4rem;
+  color: black;
+  padding: 15.4rem 0rem 2.4rem 6.4rem;
+  /*   padding-top: 15.4rem;
+  padding-left: 6.4rem;
+  padding-bottom: 2.4rem; */
+}
+
+.orange p {
+  font-size: 2rem;
+  color: black;
+  padding: 0rem 0rem 2.4rem 6.4rem;
+}
+
+.press {
+  margin: 12rem auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 5rem;
+}
+
+.press a img {
+  width: 100%;
+}
+
+.top-text h2 {
+  font-size: 4rem;
+  color: black;
+  padding-bottom: 2.4rem;
+}
+
+.top-text p {
+  font-size: 2rem;
+  padding-bottom: 5.6rem;
+}
+
+.opensea {
+  text-decoration: underline;
+  font-size: 500;
+}
+
+.showcase {
+  overflow: hidden;
+}
+
+.showcase__cards {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 4rem;
+  justify-content: center;
+}
+
+.showcase__text-wrapper {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  width: 24.6rem;
+  justify-content: space-between;
+  background-color: #eeeeee;
+  width: auto;
+  margin: 0rem;
+  padding: 2.3rem;
+}
+
+.showcase__text-wrapper h2 {
+  font-weight: 600;
+  font-size: 2rem;
+  color: black;
+}
+
+.showcase__text-wrapper p {
+  font-weight: 400;
+  font-size: 1.8rem;
+  color: #777777;
+}
+
+.right__wrapper {
+  display: flex;
+  justify-content: flex-end;
+  gap: 0.8rem;
+}
+
+.showcase__text-left {
+  grid-column: 1 / 8;
+}
+
+.showcase__text-right {
+  text-align: right;
+  grid-column: 8 / -1;
+}
+
+.showcase__text-right > *,
+.showcase__text-left > * {
+  padding-bottom: 1.2rem;
+}
+
+.showcase__text-left .orange-text {
+  color: #ff8139;
+}
+
+.showcase__cards-first {
+  display: flex;
+  flex-direction: column;
+}
+
+.showcase__cards-first img {
+  width: 100%;
 }
